k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: credit-score
spec:
  replicas: 2
  selector:
    matchLabels:
      app: credit
  template:
    metadata:
      labels:
        app: credit
    spec:
      containers:
        - name: api
          image: credit-score:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          startupProbe:
            httpGet:
              path: /health
              port: 8000
            failureThreshold: 30
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            periodSeconds: 5
          resources:
            requests:
              cpu: "50m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
