k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: credit-score
spec:
  type: ClusterIP
  selector:
    app: credit
  ports:
    - port: 80
      targetPort: 8000
